--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,34 @@
 {
   "short_name": "Dictionary",
   "name": "Dictionary",
+  "display": "standalone",
   "icons": [
-
+    {
+      "src": "icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
   ],
   "start_url": ".",
-  "display": "standalone",
   "theme_color": "#0f4c5c",
   "background_color": "#6c757d"
 }
